--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,5 +1,5 @@
 .main {
-    background-color: lightblue;
+    background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
