--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -9,11 +9,25 @@
 .gallery {
     display: flex;
     justify-content: left;
-    gap: 10px;
+    gap: 15px;
     flex-wrap: wrap;
     align-items: center;
     padding: 0 10px 0 10px;
 }
+
+.photo-card {
+    width: 200px;
+    min-height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+.photo {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
 .button {
     display: inline-block;
     padding: 5px 15px;
