--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,28 +1,32 @@
 .header {
-    background-color:#b4b487;
+    background-color:grey;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 50px;
-    margin-bottom: 10px;
+    height: 70px;
+    margin-bottom: 50px;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 .gallery {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     gap: 15px;
     flex-wrap: wrap;
     align-items: center;
     padding: 0 10px 0 10px;
+    margin-top: 100px;
 }
 
 .photo-card {
-    width: 200px;
-    min-height: 300px;
+    width: 300px;
+    min-height: 250px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 .photo {
-    width: 200px;
+    width: 300px;
     height: 200px;
     object-fit: cover;
     border-radius: 8px;
@@ -31,13 +35,13 @@
 .button {
     display: inline-block;
     padding: 5px 15px;
-    font-size: 14px;
+    font-size: 16px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: black;
     border: none;
     border-radius: 10px;
     box-shadow: 0 2px #999;
@@ -54,12 +58,44 @@
 }
 
 .input {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
     transition: width 0.4s ease-in-out;
-    width: 50%;
+    width: 300px;
 }
-input:focus {
+.input:focus {
     background-color: lightblue;
-    width: 70%;
+}
+.info {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+}
+.load-more {
+    display: inline-block;
+    padding: 5px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: black;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 2px #999;
+    position: relative;
+    left: 50%;
+    margin-top: 10px;
+    // visibility: hidden;
+}
+.load-more:hover {
+    background-color: #3e8e41
+}
+
+.load-more:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
