--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -88,6 +88,7 @@
     position: relative;
     left: 50%;
     margin-top: 10px;
+    margin-bottom: 10px;
     // visibility: hidden;
 }
 .load-more:hover {
