--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+    color: black;
+}
 .header {
     background-color:grey;
     display: flex;
@@ -21,7 +25,7 @@
 
 .photo-card {
     width: 300px;
-    min-height: 250px;
+    height: 250px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
